//protoc -I ./proto --go_out ./proto --go-grpc_out ./proto/ ./proto/helloworld.proto

syntax = "proto3";
package proto;
option go_package = "proto/grpc";

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string message = 1;
}

service HelloWorld {
  rpc SayHelloWorld(HelloRequest) returns (HelloResponse) {
  }
}